# Dophyn

./: .gitignore  CMakeLists.txt  CMakeSettings.json  vcpkg_rf.txt
include/core/: Engine.hpp  Logger.hpp  Point.hpp  matrix.hpp
include/events/: Event.hpp
include/graphics/: Surface.hpp  Texture.hpp  TextureManager.hpp
include/listeners/: MouseListener.hpp
include/renderer/: Renderer.hpp  Window.hpp
include/utils/: Color.hpp  Matrix.hpp  Point.hpp  System.hpp  Time.hpp  matrix.hpp  vector.hpp
src/: main.cpp
src/core/: Engine.cpp  Logger.cpp  Point.cpp  matrix.cpp  vector.cpp
src/events/: Event.cpp
src/graphics/: TextureManager.cpp
src/listeners/: MouseListener.cpp
src/renderer/: Renderer.cpp  Window.cpp
src/utils/: Color.cpp  Point.cpp  Time.cpp  matrix.cpp  vector.cpp
